fix add config button alignment

--- a/client/assets/styles/scss/layout/environment-header.scss
+++ b/client/assets/styles/scss/layout/environment-header.scss
@@ -30,6 +30,7 @@
       font-size: 16px;
       height: $input-sm;
       line-height: $input-line-height-sm;
+      margin-top: 3px;
     }
 
     &.scale {
